task-6: device and telemetry microservices, kafka integration
